images on small screen fixed

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -169,4 +169,12 @@ ul {
     .flex-container {
         display: block;
     }
+
+    img {
+        border-radius: 4px;
+        margin: 10px auto;
+        padding: 5px;
+        width: 100%;
+        height: auto;
+    }
 }
